<resources>
    <string name="app_name">EasyWeathy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_setting">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="location_sett">Location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language_sett">Language</string>
    <string name="m_s">Meter/Sec</string>
    <string name="mile_h">Mile/Hour</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="celesius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="visibility">Visiblity</string>
    <string name="ultra">Ultra</string>
    <string name="search_for_location">Search For Location</string>
    <string name="location_prefrence">location</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Alerts</string>
    <string name="week">This Week</string>
    <string name="today">To Day</string>

    <string name="delete_confirmation">Are You Sure , You want to Delete this country weather from your favourites ?</string>
    <string name="alert_type">Alert Type</string>
    <string name="notification">Notification</string>
    <string name="alert_sett">Alert</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save_dialog">Save</string>
    <string name="alert_delete">Are You Sure , You want to Delete this weather alert from your alerts list ?</string>
    <string name="dismiss">Dismiss</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="rain">Rain</string>
    <string name="check_network">Please check your internet connection and try agian</string>
    <string-array name="myAlerts">
        <item>Rain</item>
        <item>Storm</item>
        <item>Volcano</item>
        <item>Earthquake</item>
        <item>Tornado</item>
    </string-array>
    <string name="last_data">This your last data for more recent data please check your network connection</string>
    <string name="add_to_fav">Add to favourite</string>
    <string name="add_to_alert">Add to alert</string>
</resources>