<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_home"
            android:title="@string/home"
            
            />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/alertFragment"
            android:icon="@drawable/baseline_add_alert"
            android:title="@string/alert" />
        <item
            android:id="@+id/favouriteFragment"
            android:icon="@drawable/baseline_favorite"
            android:title="@string/favourite" />
    </group>
</menu>