<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/location_sett"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rg_location_dialogue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rg_location_dialogue"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/alert_type"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rg_alert_dialogue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rg_alert_dialogue" />

        <Button
            android:id="@+id/btn_submit_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_alert_dialogue" />

        <RadioGroup
            android:id="@+id/rg_alert_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_location_dialogue">

            <RadioButton
                android:id="@+id/rb_not_dialogue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:elevation="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/notification"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="129dp" />

            <RadioButton
                android:id="@+id/rb_alert_dialogue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:elevation="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/alert_sett"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="129dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_location_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.879"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15">

            <RadioButton
                android:id="@+id/rb_gps_dialogue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:elevation="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/gps"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="129dp" />

            <RadioButton
                android:id="@+id/rb_map_dialogue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:elevation="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/map"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="129dp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>