<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_sett"
        android:textColor="@color/background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Alert Type"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/rg_location_dialogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046">

        <RadioButton
            android:id="@+id/rb_gps_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:elevation="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/gps"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

        <RadioButton
            android:id="@+id/rb_map_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:elevation="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/map"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_alert_dialogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_not_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:elevation="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Notification"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

        <RadioButton
            android:id="@+id/rb_alert_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:elevation="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Alert"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit_dialogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>